@@ -8,6 +8,8 @@
 
 <body lang="en-US" dir="ltr">
 <h2 align="center">Eclipse-OProfile Plug-in Developer's Guide</h2>
+<H4 ALIGN=CENTER>Version 1.2.0: 31 August 2004</H4>
+<H4 ALIGN=CENTER><A NAME="version">Version 1.2.1: 04 February 2005</A></H4>
 
 <ul>
     <li><a href="#overview">Overview of the Eclipse-OProfile Plug-ins</a>
@@ -485,11 +487,9 @@ Result:<p></p>
 <pre><code>
 <var>output</var> := "&lt;info&gt;" <var>info</var> "&lt;/info&gt;"
 
-<var>info</var> := <var>num-ctrs</var> <var>cpu-freq</var> <var>defaults</var> <var>event-list</var>
+<var>info</var> := <var>num-ctrs</var> <var>defaults</var> <var>event-list</var>
 
 <var>num-ctrs</var> := "&lt;num-counters&gt;" <var>decimal</var> "&lt;/num-counters&gt;"
-
-<var>cpu-freq</var> := "&lt;cpu-frequency&gt;" <var>float</var> "&lt;/cpu-frequency&gt;"
 
 <var>defaults</var> := "&lt;defaults&gt;" <var>def-sample-dir</var> | <var>def-lock-file</var> | <var>def-log-file</var> | <var>def-dump-status</var> "&lt;/defaults&gt;"
 
@@ -533,7 +533,6 @@ Result:<p></p>
 $ opxml info
 &lt;info&gt;
     &lt;num-counters&gt;2&lt;/num-counters&gt;
-    &lt;cpu-frequency&gt;728.619&lt;/cpu-frequency&gt;
     &lt;defaults&gt;
         &lt;sample-dir&gt;/var/lib/oprofile/samples/&lt;/sample-dir&gt;
         &lt;lock-file&gt;/var/lib/oprofile/lock&lt;/lock-file&gt;
