@@ -1,3 +1,8 @@
+2005-02-04  Jeremy Handcock  <handcock@redhat.com>
+
+	* developer/oprofile-design.html: Updates from Keith.
+	* developer/structure.html: Update.
+
 2004-10-21  Jeremy Handcock  <jbh@ualberta.ca>
 
 	* developer/structure.html: Change my status to independent.
